--- a/frontend/src/app/task-group/task-group.component.css
+++ b/frontend/src/app/task-group/task-group.component.css
@@ -4,8 +4,33 @@
   padding-bottom: 10px;
   border-radius: 2px;
   background-color: #DBDDE0;
+  height: 85%;
+}
+
+.card-list-wrapper {
+  overflow-y: scroll;
+  height: 95%;
+}
+
+.card-group-title {
+  font-size: 14px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: -2px;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .card-wrapper {
-  margin: 8px 6px;
+  margin: 8px 10px;
+}
+
+.card-finished {
+  padding: 16px 24px 2px 24px;
+  /* background-color: lightgray; */
+  background-color: white;
+  opacity: 0.6;
+  margin: 4px 2px;
+  box-shadow: 0px 0px 2px #AAAAAA;
 }
