--- a/frontend/src/app/task-group/task-group.component.html
+++ b/frontend/src/app/task-group/task-group.component.html
@@ -1,14 +1,24 @@
 <div class="card-group-wrapper">
-  <mat-list>
-    <div class="card-wrapper" draggable (dragstart)="cardDragStart($event)" (dragend)="cardDragEnd($event)">
-      <mat-card>
-        <mat-card-content>Example Card</mat-card-content>
-      </mat-card>
-    </div>
-    <div class="card-wrapper">
-      <mat-card>
-        <mat-card-content>Example Card</mat-card-content>
-      </mat-card>
-    </div>
-  </mat-list>
+  <h3 class="card-group-title">Card Group 1</h3>
+  <div class="card-list-wrapper">
+    <mat-selection-list>
+      <div class="card-wrapper" draggable
+        *ngFor="let task of getUnfinishedTasks()"
+        (dragstart)="cardDragStart($event)"
+        (dragend)="cardDragEnd($event)"
+        [@toggleCompletionAnimation]="task.finished ? 'done' : 'undone'">
+        <mat-card>
+          <mat-card-content><mat-checkbox color="primary" (click)="toggleTask(task)" [ngModel]="task.finished">{{task.title}}</mat-checkbox></mat-card-content>
+        </mat-card>
+      </div>
+    </mat-selection-list>
+    <mat-selection-list>
+      <div class="card-wrapper"
+        *ngFor="let task of getFinishedTasks()">
+        <div class="card-finished">
+          <mat-card-content><mat-checkbox color="primary" (click)="toggleTask(task)" [ngModel]="task.finished">{{task.title}}</mat-checkbox></mat-card-content>
+        </div>
+      </div>
+    </mat-selection-list>
+  </div>
 </div>
