--- a/frontend/src/app/task-group/task-group.component.css
+++ b/frontend/src/app/task-group/task-group.component.css
@@ -1,10 +1,12 @@
 .card-group-wrapper {
   width: 300px;
   margin: 10px 20px;
-  padding-bottom: 10px;
+  padding-bottom: 20px;
   border-radius: 2px;
   background-color: #DBDDE0;
-  height: 85%;
+  position: absolute;
+  bottom: 0;
+  top: 0;
 }
 
 .card-list-wrapper {
