修复dashboard-taskgroup的显示问题

--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -13,6 +13,8 @@
     <app-task-group></app-task-group>
     <app-task-group></app-task-group>
     <app-task-group></app-task-group>
+    <app-task-group></app-task-group>
+    <app-task-group></app-task-group>
   </div>
   <footer class="dashboard-foot"></footer>
 </div>
