--- a/frontend/src/app/dashboard/dashboard.component.css
+++ b/frontend/src/app/dashboard/dashboard.component.css
@@ -20,7 +20,9 @@
   flex: 1;
   overflow-x: scroll;
   overflow-y: hidden;
-  height: auto;
+  min-width: 100%;
+  display: flex;
+  height: 300px;
 }
 
 .fill-remaining-space {
