--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -4,8 +4,9 @@
       <span>Ostrich</span>
       <span class="fill-remaining-space"></span>
       <span class="toolbar-right">
-        <button mat-button>Calendar</button>
-        <button mat-button>Me</button>
+        <a href="/chat" mat-button>Chat</a>
+        <a href="/calendar" mat-button>Calendar</a>
+        <a mat-button>Me</a>
       </span>
     </mat-toolbar>
   </div>
