--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
       <span>Ostrich</span>
       <span class="fill-remaining-space"></span>
       <span class="toolbar-right">
+        <a href="/#/file" mat-button>File</a>
         <a href="/#/chat" mat-button>Chat</a>
         <a href="/#/calendar" mat-button>Calendar</a>
         <a mat-button>Me</a>
