--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,15 +1,16 @@
 <div class="login-container">
   <div class="card-wrapper">
+    <mat-progress-bar class="example-margin" *ngIf="progressBarExists" mode="indeterminate"></mat-progress-bar>
     <mat-card>
       <mat-card-title>登录</mat-card-title>
       <mat-card-subtitle>输入您的账户信息以使用 Ostrich</mat-card-subtitle>
       <mat-card-content>
-        <form class="login-form">
+        <form class="login-form" (submit)="submitLogin()">
           <mat-form-field>
-            <input matInput type="email" placeholder="电子邮箱地址">
+            <input matInput type="email" placeholder="电子邮箱地址" name="email" [(ngModel)]="email" required>
           </mat-form-field>
           <mat-form-field>
-            <input matInput type="password" placeholder="密码">
+            <input matInput type="password" placeholder="密码" name="password" [(ngModel)]="password" required>
           </mat-form-field>
           <button mat-raised-button type="submit" color="primary">提交</button>
         </form>
