--- a/frontend/src/app/project-list/project-list.component.css
+++ b/frontend/src/app/project-list/project-list.component.css
@@ -2,6 +2,19 @@
   width: 100%;
 }
 
+.snipper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.projects-involved {
+  font-weight: normal;
+  font-size: 20px;
+  margin: 18px 6px 10px 0;
+}
+
 .project-list-wrapper {
   width: 80%;
   margin: 18px auto;
@@ -9,6 +22,13 @@
 
 .project-item {
   padding: 14px 12px 2px 12px;
+  margin-bottom: 14px;
+}
+
+.project-item:hover {
+  cursor: pointer;
+  box-shadow: 0 0 6px #666666;
+  transition: box-shadow 0.218s ease;
 }
 
 .card-content {
