--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
   <footer class="dashboard-foot"></footer>
 </div>
 <div class="add-icon-wrapper">
-  <button mat-fab color="primary">
+  <button mat-fab color="primary" (click)="openDialog()">
     <mat-icon svgIcon="plus"></mat-icon>
   </button>
 </div>
