--- a/frontend/src/app/project-list/project-list.component.html
+++ b/frontend/src/app/project-list/project-list.component.html
@@ -16,13 +16,13 @@
           </div>
           <div class="project-right">
             <div class="icons">
-              <button mat-icon-button>
+              <button mat-icon-button matTooltip="邀请新用户">
                 <mat-icon svgIcon="add-user" class="feat-icon"></mat-icon>
               </button>
-              <button mat-icon-button>
+              <button mat-icon-button matTooltip="查看项目详情">
                 <mat-icon svgIcon="detail" class="feat-icon"></mat-icon>
               </button>
-              <button mat-icon-button>
+              <button mat-icon-button matTooltip="离开项目">
                 <mat-icon svgIcon="leave" class="feat-icon"></mat-icon>
               </button>
             </div>
