--- a/frontend/src/app/notification/notification.component.html
+++ b/frontend/src/app/notification/notification.component.html
@@ -1,6 +1,6 @@
-<mat-selection-list>
+<mat-list>
   <mat-list-option *ngFor="let notification of notifications">
     {{notification.sender}} --- {{notification.message}}
   </mat-list-option>
-</mat-selection-list>
+</mat-list>
 <button (click)="sendMessage()">Send</button>
