加入创建任务功能

--- a/frontend/src/app/project-list/project-list.component.css
+++ b/frontend/src/app/project-list/project-list.component.css
@@ -57,3 +57,11 @@
 .feat-icon {
   width: 20px;
 }
+
+.add-icon-wrapper {
+  width: 80%;
+  height: 80%;
+  position: fixed;
+  left: 92%;
+  top: 85%;
+}
