更新chat/通知/日历样式

--- a/frontend/src/app/notification/notification.component.html
+++ b/frontend/src/app/notification/notification.component.html
@@ -1,6 +1,7 @@
-<mat-list>
-  <mat-list-option *ngFor="let notification of notifications">
-    {{notification.sender}} --- {{notification.message}}
-  </mat-list-option>
-</mat-list>
+<div>
+    <mat-card *ngFor="let notification of notifications">
+      <mat-card-title class="notification-sender">{{notification.sender.nickname}}</mat-card-title>
+      <mat-card-content class="notification-message">{{notification.message}}</mat-card-content>
+    </mat-card>
 <button (click)="sendMessage()">Send</button>
+</div>
