--- a/frontend/src/app/notification/notification.component.css
+++ b/frontend/src/app/notification/notification.component.css
@@ -1,5 +1,17 @@
-mat-list{
-  margin: 20px auto;
-  width: 400px;
-  padding: 10px;
+mat-card {
+  margin-top: 10px;
+  padding-left: 50px;
+  width: 600px;
 }
+
+div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+mat-card-content {
+  margin-left: 100px;
+  font-size: 16pt;
+}
+
