--- a/frontend/src/app/navigation-bar/navigation-bar.component.html
+++ b/frontend/src/app/navigation-bar/navigation-bar.component.html
@@ -1,13 +1,13 @@
 <div class="toolbar-wrapper">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span>Ostrich</span>
+      <span class="app-name">Ostrich</span>
       <span class="toolbar-spacer"></span>
       <button mat-button>日历</button>
       <button mat-button>文件</button>
       <button mat-button [matMenuTriggerFor]="appMenu">我</button>
       <mat-menu #appMenu="matMenu">
-        <button mat-menu-item>
+        <button mat-menu-item [routerLink]="['/projects']">
           <!-- <mat-icon>dialpad</mat-icon> -->
           <span>个人中心</span>
         </button>
@@ -15,7 +15,7 @@
           <!-- <mat-icon>voicemail</mat-icon> -->
           <span>邀请新成员</span>
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item (click)="logOut()">
           <!-- <mat-icon>退出登录</mat-icon> -->
           <span>退出登录</span>
         </button>
