基本实现预订功能

--- a/frontend/src/app/calendar/calendar.component.html
+++ b/frontend/src/app/calendar/calendar.component.html
@@ -1,4 +1,6 @@
+<mat-card>
 <angular2-fullcalendar [options]="options">
 </angular2-fullcalendar>
+</mat-card>
 <button id="add" style="display: none" (click)="openDialog()"></button>
 <button id="detail" style="display: none" (click)="openDetailDialog()"></button>
