--- a/frontend/src/app/navigation-bar/navigation-bar.component.html
+++ b/frontend/src/app/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
 <div class="toolbar-wrapper">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span class="app-name">Ostrich</span>
+      <a class="app-name" [routerLink]="['/projects']">Ostrich</a>
       <span class="toolbar-spacer"></span>
       <a [routerLink]="['/notification']" mat-button>通知</a>
       <a [routerLink]="['/chat']" mat-button>会话</a>
