--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="navbar-wrapper">
+<div class="navbar-wrapper" *ngIf="loggedIn()">
   <app-navigation-bar></app-navigation-bar>
 </div>
 <router-outlet></router-outlet>
